--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -23,11 +23,11 @@
       <% }); %>
   </tbody>
 </table>
-<div class="paging_simple_numbers">
+<!-- <div class="paging_simple_numbers">
   <span class="paginate_button previous disabled">Previous</span>
   <span class="paginate_button current">1</span>
   <span class="paginate_button next disabled">Next</span>
-</div>
+</div> -->
 
 <script>
   $(document).ready(function() {
